# translator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yml  config.example.yml  pyproject.toml
.github/workflows/: bump.yml  ci.yml  docker.yml  publish.yml  release.yml
docs/: deployment.md  design.md  translation-engines.md
tests/: helpers.py  test_admin.py  test_api.py  test_baidu_engine.py  test_bing_engine.py  test_config.py  test_deepl_engine.py  test_detect.py  test_fixtures.py  test_glossary.py  test_html_tools.py  test_languages.py  test_live.py  test_nllb_engine.py  test_openai_engine.py  test_prompts.py  test_router.py  test_service.py
tests/fixtures/: ja.html  ko.html  zh.html
translator/: __init__.py  _compat.py  admin.py  api.py  app.py  config.py  defaults.py  detect.py  errors.py  glossary.py  html_tools.py  languages.py  main.py  prompts.py  router.py  schemas.py  service.py  state.py
translator/engines/: __init__.py  baidu.py  base.py  bing.py  deepl.py  nllb.py  openai_compat.py
translator/static/: app.css  index.html
translator/static/js/: api.js  app.js  icons.js  store.js  ui.js
translator/static/js/views/: dashboard.js  detect.js  engine-edit.js  engines.js  policy.js  provider-edit.js  providers.js  raw-config.js  routing.js  translate-chapter.js  translate-text.js
