[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "translator"
version = "0.1.0"
description = "Stateless web-novel translation service with switchable engines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "ctranslate2>=4.5",
  "fastapi[standard]>=0.115",
  "httpx>=0.27",
  "huggingface-hub>=0.26",
  "lingua-language-detector>=2.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "sentencepiece>=0.2",
]

[dependency-groups]
dev = [
  "httpx2>=2.7.0",
  "mypy>=1.11",
  "poethepoet>=0.30",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "types-pyyaml",
]

[tool.poe.tasks]
lint = [{ cmd = "ruff check . --fix" }, { cmd = "ruff format ." }]
lint-check = [{ cmd = "ruff check ." }, { cmd = "ruff format --check ." }]
typecheck = "mypy"
test = "pytest -q"
check = ["lint", "typecheck", "test"]
dev = "fastapi dev translator/main.py --port 8184"
start = "uvicorn translator.main:app --host 0.0.0.0 --port 8184"
docker = "docker compose up -d --build"
# Exercises every enabled engine in config.yml with two tiny real calls.
live-test = { cmd = "pytest tests/test_live.py -s", env = { LIVE_ENGINE_TEST = "1" } }

[tool.hatch.build.targets.wheel]
packages = ["translator"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["translator"]

[[tool.mypy.overrides]]
module = ["bs4.*", "lingua.*", "ctranslate2.*", "sentencepiece.*"]
ignore_missing_imports = true
